--- a/libsx/Makefile.in
+++ b/libsx/Makefile.in
@@ -140,6 +140,7 @@ am__uninstall_files_from_dir = { \
   }
 am__installdirs = "$(DESTDIR)$(libdir)"
 LTLIBRARIES = $(lib_LTLIBRARIES)
+src_libsx_la_DEPENDENCIES =
 am__dirstamp = $(am__leading_dot)dirstamp
 am_src_libsx_la_OBJECTS = src/src_libsx_la-cert.lo \
 	src/src_libsx_la-curlevents.lo src/src_libsx_la-cluster.lo \
@@ -466,7 +467,6 @@ src_libsx_la_SOURCES = \
 	src/version.c
 
 src_libsx_la_LIBADD = @YAJL_LIBS@ @LIBCURL@ @CRYPTO_LIBS@ @LIBLTDL@ -lssl
-src_libsx_la_DEPENDENCIES = @LIBCURL@
 # TODO: only sx_ should be exported not sxi_
 src_libsx_la_LDFLAGS = -no-undefined -export-symbols-regex sx.*
 src_libsx_la_CPPFLAGS = $(AM_CPPFLAGS) @YAJL_CPPFLAGS@ @LIBCURL_CPPFLAGS@ @CRYPTO_CFLAGS@ \
