--- a/Makefile.am
+++ b/Makefile.am
@@ -8,9 +8,14 @@ endif
 if BUILD_YAJL
 SUBDIRS += 3rdparty/yajl_build
 endif
-EXTRA_DIST=3rdparty/yajl 3rdparty/nginx 3rdparty/check 3rdparty/fcgi 3rdparty/sxhttpd 3rdparty/yajl_build
+EXTRA_DIST=3rdparty/yajl 3rdparty/nginx 3rdparty/fcgi 3rdparty/sxhttpd 3rdparty/yajl_build
 
-SUBDIRS += libsx client server
+SUBDIRS += libsx client
+
+if BUILD_SERVER
+SUBDIRS += server
+endif
+
 DIST_SUBDIRS = $(SUBDIRS)
 
 clean-local:
