--- a/3rdparty/sxhttpd/sxserver/sxhttpd.conf.default.in
+++ b/3rdparty/sxhttpd/sxserver/sxhttpd.conf.default.in
@@ -1,4 +1,4 @@
-user www-data www-data;
+user nobody nobody;
 worker_processes 4;
 error_log @localstatedir@/log/sxserver/sxhttpd-error.log;
 pid @localstatedir@/run/sxserver/sxhttpd.pid;
