don't build ltdl if --without-included-ltdl is given

--- a/libsx/Makefile.am
+++ b/libsx/Makefile.am
@@ -1,6 +1,9 @@
 ACLOCAL_AMFLAGS = -I m4
 
-SUBDIRS = libltdl
+SUBDIRS=
+if BUILD_LTDL
+SUBDIRS += libltdl
+endif
 if BUILD_CURL
 SUBDIRS += ../3rdparty/curl
 endif
