--- a/libsx/configure.ac
+++ b/libsx/configure.ac
@@ -16,7 +16,14 @@ AC_CONFIG_MACRO_DIR([m4])
 LT_CONFIG_LTDL_DIR([libltdl])
 LT_INIT([disable-static dlopen])
 LTDL_INIT([recursive])
-AC_CONFIG_FILES([libltdl/Makefile])
+
+if "$with_included_libltdl" = "yes"; then
+    AC_MSG_NOTICE([using included ltdl])
+    AC_CONFIG_FILES([libltdl/Makefile])
+else
+    AC_MSG_NOTICE([using system ltldl])
+fi
+AM_CONDITIONAL([BUILD_LTDL], [test "$with_included_ltdl" = "yes"])
 
 # Checks for programs.
 AC_PROG_CC
