make filters link libsx for they use its symbols

--- a/client/src/filters/null/Makefile.am
+++ b/client/src/filters/null/Makefile.am
@@ -2,3 +2,4 @@ AM_CPPFLAGS = -I $(top_srcdir)/../libsx/include
 pkglib_LTLIBRARIES = sxf_null.la
 sxf_null_la_SOURCES = null.c
 sxf_null_la_LDFLAGS = -module -shared
+sxf_null_la_LIBADD = $(top_srcdir)/../libsx/src/libsx.la
