--- a/client/src/filters/zcomp/Makefile.in
+++ b/client/src/filters/zcomp/Makefile.in
@@ -125,7 +125,8 @@ am__uninstall_files_from_dir = { \
   }
 am__installdirs = "$(DESTDIR)$(pkglibdir)"
 LTLIBRARIES = $(pkglib_LTLIBRARIES)
-sxf_zcomp_la_DEPENDENCIES =
+@BUILD_ZCOMP_TRUE@sxf_zcomp_la_DEPENDENCIES =  \
+@BUILD_ZCOMP_TRUE@	$(top_srcdir)/../libsx/src/libsx.la
 am__sxf_zcomp_la_SOURCES_DIST = zcomp.c
 @BUILD_ZCOMP_TRUE@am_sxf_zcomp_la_OBJECTS = zcomp.lo
 sxf_zcomp_la_OBJECTS = $(am_sxf_zcomp_la_OBJECTS)
@@ -322,7 +323,7 @@ top_srcdir = @top_srcdir@
 @BUILD_ZCOMP_TRUE@pkglib_LTLIBRARIES = sxf_zcomp.la
 @BUILD_ZCOMP_TRUE@sxf_zcomp_la_SOURCES = zcomp.c
 @BUILD_ZCOMP_TRUE@sxf_zcomp_la_LDFLAGS = -module
-@BUILD_ZCOMP_TRUE@sxf_zcomp_la_LIBADD = @ZCOMP_LIBS@
+@BUILD_ZCOMP_TRUE@sxf_zcomp_la_LIBADD = @ZCOMP_LIBS@ $(top_srcdir)/../libsx/src/libsx.la
 all: all-am
 
 .SUFFIXES:
