--- a/client/src/filters/null/Makefile.in
+++ b/client/src/filters/null/Makefile.in
@@ -125,7 +125,7 @@ am__uninstall_files_from_dir = { \
   }
 am__installdirs = "$(DESTDIR)$(pkglibdir)"
 LTLIBRARIES = $(pkglib_LTLIBRARIES)
-sxf_null_la_LIBADD =
+sxf_null_la_DEPENDENCIES = $(top_srcdir)/../libsx/src/libsx.la
 am_sxf_null_la_OBJECTS = null.lo
 sxf_null_la_OBJECTS = $(am_sxf_null_la_OBJECTS)
 AM_V_lt = $(am__v_lt_@AM_V@)
@@ -320,6 +320,7 @@ AM_CPPFLAGS = -I $(top_srcdir)/../libsx/include
 pkglib_LTLIBRARIES = sxf_null.la
 sxf_null_la_SOURCES = null.c
 sxf_null_la_LDFLAGS = -module -shared
+sxf_null_la_LIBADD = $(top_srcdir)/../libsx/src/libsx.la
 all: all-am
 
 .SUFFIXES:
